# hackaton0922

./: .gitignore  README.md
NN/: CMakeLists.txt  conanfile.txt  main.cpp
NN/headers/: detector.h  setting.h
NN/src/: detector.cpp  main.cpp  setting.cpp
front/: ]  tailwind.config.js
front/data/: db.json
front/src/: App.tsx  App.tsx.back  index.css
front/src/cmp/: CameraEditor.tsx  CameraItem.tsx  Navbar.tsx  NeironSettings.tsx
front/src/components/: AddCamera.tsx  Buttons.tsx  Buttons.tsx.back  CameraEditor.tsx  CameraItem.tsx  CameraList.tsx  CameraLowerItem.tsx  CanvasSelection.tsx  DetectAreaList.tsx  Navbar.tsx  NeironSettings.tsx  StyledTextField.tsx  index.tsx
misc/: rename.sh
